fix: rename button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="modal-window" id="login">
             <div class="popup">
               <a href="" class="close">X</a>
-              <label for="login">Authentication ...</label>
+              <label for="login">Authentication:</label>
               <input type="text" id="login" class="input-login" placeholder="Please enter login...">
               <input type="password" id="password" class="input-password" placeholder="Please enter password ...">
               <input type="submit" class="login-submit" value="Login in ">
@@ -62,12 +62,12 @@
         <div class="modal-window" id="register">
             <div class="popup">
               <a href="" class="close">X</a>
-              <label for="register">Registration</label>
+              <label for="register">Registration:</label>
               <input type="text" id="login" class="input-login" placeholder="Please enter login...">
               <input type="email" id="email" class="input-email" placeholder="Please enter email...">
               <input type="password" id="password" class="input-password" placeholder="Please enter password ...">
               <input type="password" id="password" class="input-password" placeholder="Confirm password ...">
-              <input type="submit" class="login-submit" value="Submit">
+              <input type="submit" class="login-submit" value="Ok">
             </div>          
         </div>
           
